// Copyright (c) 2000-2015 TeamDev Ltd. All rights reserved.
// TeamDev PROPRIETARY and CONFIDENTIAL.
// Use is subject to license terms.
syntax = "proto3";

package spine3.sample.order;

option java_package="org.spine3.sample.order";
option java_multiple_files = true;

message Book {
    BookId book_id = 1;
    string title = 2;
    string author = 3;
    double price = 4;
}

message BookId {
    string ISBN = 1;
}